# Just_Something

./: .gitignore  .gitmodules  CMakeLists.txt  external.cmake  test.txt
.github/workflows/: cmake.yml
cmake/: config.cmake
projects/: CMakeLists.txt
projects/alienland/: CMakeLists.txt  main.cpp
projects/alienland/cmake/: config.cmake
projects/alienland/include/: BulletFactory.h  BulletManager.h  CMakeLists.txt  Character.h  Enemy.h  Game.h  TestScene.h
projects/alienland/include/internal/: pch.h
projects/alienland/src/: BulletManager.cpp  CMakeLists.txt  Character.cpp  Enemy.cpp  Game.cpp  TestScene.cpp  main.cpp
projects/compile_check/: CMakeLists.txt  sdl.cpp  sfml.cpp
projects/compile_check/sdl/: CMakeLists.txt  sdl.cpp
projects/compile_check/sfml/: CMakeLists.txt  sfml.cpp
projects/less_001/: CMakeLists.txt  MyString.cpp  MyString.h  My_String.cpp  My_String.h  main.cpp
projects/less_002/: main.cpp
projects/less_003/: CMakeLists.txt  main.cpp
projects/less_004/: main.cpp
projects/less_005/: CMakeLists.txt  main.cpp
projects/lessons/: CMakeLists.txt
projects/lessons/less_002/: CMakeLists.txt
projects/lessons/less_004/: CMakeLists.txt  main.cpp
projects/lessons/less_006/: CMakeLists.txt  main.cpp
projects/lessons/less_007_test/: CMakeLists.txt  Engine.h  InternalCombustionEngine.cpp  InternalCombustionEngine.h  TestStand.cpp  TestStand.h  UserInterface.cpp  UserInterface.h  Utils.cpp  Utils.h  main.cpp
projects/lessons/less_007_test/include/: CMakeLists.txt  Engine.h  InternalCombustionEngine.h  TestStand.h  UserInterface.h  Utils.h
projects/lessons/less_007_test/include/Internal/: Precompile.h
projects/lessons/less_007_test/source/: CMakeLists.txt  InternalCombustionEngine.cpp  TestStand.cpp  UserInterface.cpp  Utils.cpp
projects/libalienland/: CMakeLists.txt
projects/libalienland/include/: Bullet.h  BulletFactory.h  BulletManager.h  CMakeLists.txt  Character.h  CollisionProcessor.h  Enemy.h  Game.h  GameLoopDelegate.h  GameObject.h  GameObjectTransform.h  GameScene.h  SfmlGameLoopDelegate.h  SfmlUtils.h  TestScene.h  Utils.h
projects/libalienland/include/Imgui/: ImguiController.h  ImguiDebugWidget.h  ImguiWidgetBase.h
projects/libalienland/include/Imgui/Impl/: FrameProcessor.h
projects/libalienland/include/Internal/: pch.h
projects/libalienland/include/Render/: SimpleSpriteUnitRender.h
projects/libalienland/src/: Bullet.cpp  BulletFactory.cpp  BulletManager.cpp  CMakeLists.txt  Character.cpp  CollisionProcessor.cpp  Enemy.cpp  Game.cpp  GameObject.cpp  GameScene.cpp  SfmlGameLoopDelegate.cpp  SfmlUtils.cpp  TestScene.cpp  Utils.cpp
projects/libalienland/src/Imgui/: ImguiController.cpp  ImguiDebugWidget.cpp
projects/libalienland/src/Imgui/Impl/: FrameProcessor.cpp
projects/libalienland/src/Render/: SimpleSpriteUnitRender.cpp
projects/libalienland/tests/: CMakeLists.txt
projects/libalienland/tests/src/: CMakeLists.txt  test.cpp
projects/libcore/: CMakeLists.txt
projects/libcore/include/: CMakeLists.txt  Core.h  Log.h
projects/libcore/include/Asserts/: AssertMacros.h  Asserts.h
projects/libcore/include/Internal/: CMakeLists.txt
projects/libcore/include/Log/: Log.h  LogMacros.h  LogMessageData.h  LogMessageSeverity.h  LogSink.h
projects/libcore/include/internal/: pch.h
projects/libcore/src/: CMakeLists.txt
projects/libcore/src/Asserts/: Asserts.cpp
projects/libcore/src/Log/: FileLogSink.cpp  Log.cpp  LogUtils.cpp
projects/libcore/tests/: CMakeLists.txt  sample.cpp
projects/libcore/tests/Log/: LogTest.cpp
projects/libcore/tests/src/Asserts/: AssertsTest.cpp
projects/libcore/tests/src/Log/: LogTest.cpp
